--- a/AutomationController/build.gradle
+++ b/AutomationController/build.gradle
@@ -31,6 +31,7 @@ repositories {
 }
 
 dependencies {
+	compile 'org.jsoup:jsoup:1.9.2'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 	compile group: 'com.pi4j', name: 'pi4j-core', version: '1.0'
 	compile group: 'com.pi4j', name: 'pi4j-device', version: '1.0'
