--- a/AutomationController/build.gradle
+++ b/AutomationController/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	compile group: 'com.pi4j', name: 'pi4j-device', version: '1.0'
 	compile group: 'com.pi4j', name: 'pi4j-gpio-extension', version: '1.0'
 	
+	compile group: 'org.bouncycastle', name: 'bcprov-jdk16', version: '1.45'
+
+	compile group: 'javax.mail', name: 'mail', version: '1.4.1'
 
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     
@@ -49,9 +52,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
     compile("org.springframework.data:spring-data-rest-webmvc")
     
-    compile("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
-    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.0.RC2")
-    compile("org.springframework.security.oauth:spring-security-oauth2-javaconfig:1.0.0.M1")
+    //compile("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
+    //compile("org.springframework.security.oauth:spring-security-oauth2:2.0.0.RC2")
+    //compile("org.springframework.security.oauth:spring-security-oauth2-javaconfig:1.0.0.M1")
     
     compile("org.hsqldb:hsqldb")
     
