Updating Rest API, Changing Database schema

--- a/AutomationController/config.properties
+++ b/AutomationController/config.properties
@@ -1,5 +1,6 @@
 log.file=./log
 database.username=root
 database.password=root
+database.poll_frequency=2
 admin.email=christian.everett1@gmail.com
 device.config=./devices.xml
