Adding NodeController Bridge Pattern, WeatherSensor darkness level, finish Event logic, update close operation on remote nodes

--- a/AutomationController/config.properties
+++ b/AutomationController/config.properties
@@ -1,6 +1,8 @@
 log.file=./log
 database.username=root
 database.password=root
-database.poll_frequency=2
+database.poll_frequency=30
+database.querys=./mysql.properties
 admin.email=christian.everett1@gmail.com
 device.config=./devices.xml
+device.log_frequency=15
