Fix DeviceStateTriggerRange, refactor asynch devices, add delete operation

--- a/AutomationController/mysql.properties
+++ b/AutomationController/mysql.properties
@@ -37,6 +37,10 @@ UPDATE event \
 SET data = ? \
 WHERE id = ?
 
+deleteEvent = \
+DELETE FROM event \
+WHERE id = ?
+
 readDeviceLog = \
 SELECT * \
 FROM state_log \
