Moving IR driver to jni call, finished led sequencing, NodeDiscoverService uses multicast

--- a/AutomationController/mysql.properties
+++ b/AutomationController/mysql.properties
@@ -1,23 +1,53 @@
+createStateTable = \
+CREATE TABLE device_state \
+( \
+id INT, \
+name varchar(128), \
+data BLOB, \
+primary key (id) \
+)
+
+createEventTable = \
+CREATE TABLE event \
+( \
+id INT, \
+name varchar(128), \
+data BLOB, \
+primary key (id) \
+)
+
+createStateLog = \
+CREATE TABLE state_log \
+( \
+id INT, \
+name varchar(128), \
+data BLOB, \
+time_stamp DATETIME, \
+primary key (id) \
+)
+
 readStateTable = \
 SELECT * \
 FROM device_state
 
 insertSaveState = \
-INSERT INTO device_state(name, data) \
-VALUES(?, ?)
+INSERT INTO device_state(id, name, data) \
+VALUES(?, ?, ?) \
+ON DUPLICATE KEY UPDATE data=?
 
 updateSaveState = \
 UPDATE device_state \
 SET data = ? \
-WHERE name = ?
+WHERE id = ?
 
 readEventTable = \
 SELECT * \
 FROM event
 
 writeEvent = \
-INSERT INTO event(name, data) \
-VALUES(?, ?)
+INSERT INTO event(id, name, data) \
+VALUES(?, ?, ?) \
+ON DUPLICATE KEY UPDATE data=?
 
 updateEvent = \
 UPDATE event \
