Using Spring Autowiring, Adding ActionProfiles, Adding Echo Device, Adding DeviceLocking

--- a/AutomationClient/.settings/org.eclipse.jdt.core.prefs
+++ b/AutomationClient/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Tue Dec 27 19:44:44 EST 2016
+#Thu Jul 13 18:24:15 EDT 2017
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
