--- a/AutomationController/build.gradle
+++ b/AutomationController/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
 	ext {
-		springBootVersion = '1.0.2.RELEASE'
+		springBootVersion = '1.5.1.RELEASE'
 	}
     repositories {
         maven { url "http://repo.spring.io/libs-snapshot" }
         mavenLocal()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.0.2.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
     }
 }
 
@@ -36,8 +36,6 @@ dependencies {
 	compile group: 'com.pi4j', name: 'pi4j-core', version: '1.0'
 	compile group: 'com.pi4j', name: 'pi4j-device', version: '1.0'
 	compile group: 'com.pi4j', name: 'pi4j-gpio-extension', version: '1.0'
-	
-	compile group: 'org.bouncycastle', name: 'bcprov-jdk16', version: '1.45'
 
 	compile group: 'javax.mail', name: 'mail', version: '1.4.1'
 
@@ -50,7 +48,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 
     compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
-    compile("org.springframework.data:spring-data-rest-webmvc")
+    //compile("org.springframework.data:spring-data-rest-webmvc")
     
     //compile("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
     //compile("org.springframework.security.oauth:spring-security-oauth2:2.0.0.RC2")
