--- a/AutomationController/src/main/resources/application.properties
+++ b/AutomationController/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 # Database
-#db.driver: com.mysql.jdbc.Driver
-#db.url: jdbc:mysql://localhost/
-#db.username: root
-#db.password: root
-
+spring.datasource.url=jdbc:mysql://localhost:3306/pidb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #Hibernate Configuration:
-#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#entitymanager.packages.to.scan=com.spr.model
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+log4j.logger.org.hibernate=error
