--- a/AutomationClient/.settings/org.eclipse.jdt.core.prefs
+++ b/AutomationClient/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Thu Jul 13 18:24:15 EDT 2017
+#Sat Dec 02 15:01:05 EST 2017
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
