--- a/AutomationController/.settings/org.eclipse.jdt.core.prefs
+++ b/AutomationController/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Sun Sep 10 13:55:07 EDT 2017
+#Sat Dec 02 15:00:26 EST 2017
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
