--- a/AutomationController/config.properties
+++ b/AutomationController/config.properties
@@ -1,9 +1,8 @@
 log.file=./log
 database.name=pidb
-database.username=root
+database.username=test
 database.password=root
 database.poll_frequency=30
-database.querys=./mysql.properties
 admin.email=christian.everett1@gmail.com
 device.config=./devices.xml
 device.log_frequency=15
