--- a/AutomationController/src/main/resources/application.properties
+++ b/AutomationController/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/pidb
-spring.datasource.username=root
+spring.datasource.url=jdbc:mariadb://localhost:3306/pidb
+spring.datasource.username=test
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #Hibernate Configuration:
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -11,3 +11,10 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 log4j.logger.org.hibernate=error
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ceverettpi@gmail.com
+spring.mail.password=01433128
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
