Updating thermostat mode strings, adding aditional logging, adding network adaptor as a config param

--- a/AutomationController/config.properties
+++ b/AutomationController/config.properties
@@ -1,8 +1,9 @@
 log.file=./log
 database.name=pidb
-database.username=test
+database.username=root
 database.password=root
 database.poll_frequency=30
 admin.email=christian.everett1@gmail.com
 device.config=./devices.xml
 device.log_frequency=15
+network.interface=wlan0
