--- a/AutomationController/src/main/resources/application.properties
+++ b/AutomationController/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 spring.datasource.url=jdbc:mariadb://localhost:3306/pidb
-spring.datasource.username=test
+spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #Hibernate Configuration:
